# Gris

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: clang-format.yml  clang-tidy.yml  cmake.yml
cmake/: compile_shader_to_spirv.cmake  compiler_warnings.cmake  conan.cmake  group_sources_by_folder.cmake
core/: CMakeLists.txt
core/include/gris/: assert.h  casts.h  directory_registry.h  engine_exception.h  enum.h  log.h  macros.h  object_hierarchy.h  span.h  strong_type.h  utils.h
core/src/gris/: assert.cpp  directory_registry.cpp
core/tests/: CMakeLists.txt
core/tests/assert/: CMakeLists.txt
core/tests/assert/compilation/: assert_always_with_bad_format_fails.cpp  assert_fast_with_bad_format_fails.cpp  assert_slow_with_bad_format_fails.cpp  assert_tu_always.cpp  assert_tu_always_and_disable_always.cpp  assert_tu_defaults.cpp  assert_tu_disable_always.cpp  assert_tu_disable_fast.cpp  assert_tu_disable_fast_always.cpp  assert_tu_disable_fast_disable_always.cpp  assert_tu_disable_slow.cpp  assert_tu_disable_slow_always.cpp  assert_tu_disable_slow_disable_always.cpp  assert_tu_disable_slow_disable_fast.cpp  assert_tu_disable_slow_disable_fast_always.cpp  assert_tu_disable_slow_disable_fast_disable_always.cpp  assert_tu_disable_slow_fast.cpp  assert_tu_disable_slow_fast_always.cpp  assert_tu_disable_slow_fast_disable_always.cpp  assert_tu_fast.cpp  assert_tu_fast_always.cpp  assert_tu_fast_and_disable_fast.cpp  assert_tu_fast_disable_always.cpp  assert_tu_none.cpp  assert_tu_none_and_always.cpp  assert_tu_none_and_disable_always.cpp  assert_tu_none_and_disable_fast.cpp  assert_tu_none_and_disable_slow.cpp  assert_tu_none_and_fast.cpp  assert_tu_none_and_slow.cpp  assert_tu_slow.cpp  assert_tu_slow_always.cpp  assert_tu_slow_and_disable_slow.cpp  assert_tu_slow_disable_always.cpp  assert_tu_slow_disable_fast.cpp  assert_tu_slow_disable_fast_always.cpp  assert_tu_slow_disable_fast_disable_always.cpp  assert_tu_slow_fast.cpp  assert_tu_slow_fast_always.cpp  assert_tu_slow_fast_disable_always.cpp
core/tests/assert/src/: test_always_fast_no_slow.cpp  test_always_fast_slow.cpp  test_always_no_fast_no_slow.cpp  test_always_no_fast_slow.cpp  test_no_always_fast_no_slow.cpp  test_no_always_fast_slow.cpp  test_no_always_no_fast_no_slow.cpp  test_no_always_no_fast_slow.cpp
demos/: CMakeLists.txt
demos/basic/: CMakeLists.txt
demos/basic/src/: main.cpp
demos/concepts/: CMakeLists.txt
demos/concepts/src/: main.cpp
demos/forward_rendering/: CMakeLists.txt
demos/forward_rendering/src/: forward_rendering_application.cpp  forward_rendering_application.h  main.cpp
demos/vulkan_tutorial/: CMakeLists.txt
demos/vulkan_tutorial/src/: hello_triangle_application.cpp  hello_triangle_application.h  main.cpp
graphics/: CMakeLists.txt
graphics/include/gris/graphics/: EngineException.h  WindowObserver.h  image.h  mesh.h  scene.h  window_observer.h
graphics/include/gris/graphics/backend/: pipeline_resource_layout.h  shader_resource_bindings_layout.h  shader_resource_bindings_pool_sizes.h
graphics/include/gris/graphics/cameras/: trackball_camera.h
graphics/include/gris/graphics/glfw/: GlfwInstance.h  GlfwWindowMixin.h  instance.h  window_mixin.h
graphics/include/gris/graphics/lens/: perspective_lens.h
graphics/include/gris/graphics/loaders/: assimp_mesh_loader.h  dds_ktx_image_loader.h  stb_image_loader.h  tinlyobjloader_mesh_loader.h
graphics/include/gris/graphics/vulkan/: VulkanAllocation.h  VulkanAllocator.h  VulkanBuffer.h  VulkanBufferView.h  VulkanDeferredContext.h  VulkanDevice.h  VulkanDeviceResource.h  VulkanEngineException.h  VulkanFence.h  VulkanFramebuffer.h  VulkanImmediateContext.h  VulkanInputLayout.h  VulkanInstance.h  VulkanPhysicalDevice.h  VulkanPhysicalDeviceFactory.h  VulkanPipelineStateObject.h  VulkanPipelineStateObjectResource.h  VulkanRenderPass.h  VulkanSampler.h  VulkanSemaphore.h  VulkanShader.h  VulkanShaderResourceBinding.h  VulkanSwapChain.h  VulkanTexture.h  VulkanTextureView.h  VulkanUtils.h  VulkanWindowMixin.h  allocation.h  allocator.h  buffer.h  buffer_view.h  deferred_context.h  device.h  device_resource.h  device_shared_data.h  engine_exception.h  fence.h  framebuffer.h  immediate_context.h  input_layout.h  (+24 more)
graphics/include/gris/graphics/vulkan/glfw/: GlfwExtensionGetters.h  GlfwVulkanWindow.h  extension_getters.h  window.h
graphics/src/gris/graphics/: WindowObserver.cpp  window_observer.cpp
graphics/src/gris/graphics/cameras/: trackball_camera.cpp
graphics/src/gris/graphics/glfw/: GlfwInstance.cpp  GlfwWindowMixin.cpp  instance.cpp  window_mixin.cpp
graphics/src/gris/graphics/lens/: perspective_lens.cpp
graphics/src/gris/graphics/loaders/: assimp_mesh_loader.cpp  dds_ktx_image_loader.cpp  dds_ktx_implementation.cpp  stb_image_loader.cpp  tinlyobjloader_mesh_loader.cpp
graphics/src/gris/graphics/vulkan/: VulkanAllocation.cpp  VulkanAllocator.cpp  VulkanBuffer.cpp  VulkanBufferView.cpp  VulkanDeferredContext.cpp  VulkanDevice.cpp  VulkanDeviceResource.cpp  VulkanFence.cpp  VulkanFramebuffer.cpp  VulkanImmediateContext.cpp  VulkanInputLayout.cpp  VulkanInstance.cpp  VulkanPhysicalDevice.cpp  VulkanPhysicalDeviceFactory.cpp  VulkanPipelineStateObject.cpp  VulkanRenderPass.cpp  VulkanSampler.cpp  VulkanSemaphore.cpp  VulkanShader.cpp  VulkanShaderResourceBinding.cpp  VulkanSwapChain.cpp  VulkanTexture.cpp  VulkanTextureView.cpp  VulkanUtils.cpp  VulkanWindowMixin.cpp  allocation.cpp  allocator.cpp  buffer.cpp  buffer_view.cpp  deferred_context.cpp  device.cpp  device_resource.cpp  fence.cpp  framebuffer.cpp  immediate_context.cpp  input_layout.cpp  instance.cpp  physical_device.cpp  physical_device_factory.cpp  pipeline_resource_group_layout.cpp  (+19 more)
graphics/src/gris/graphics/vulkan/glfw/: GlfwExtensionGetters.cpp  GlfwVulkanWindow.cpp  extension_getters.cpp  extension_getters.h  window.cpp
graphics/tests/: CMakeLists.txt
graphics/tests/src/: test_trackball_camera.cpp
